--- a/src/screens/EndgameScreen.module.css
+++ b/src/screens/EndgameScreen.module.css
@@ -65,7 +65,7 @@
   }
 }
 
-@media screen and (max-width: 1000px) and (max-height: 600px) {
+@media screen and (max-width: 1000px) and (max-height: 700px) {
   .endgame_screen {
     gap: 3rem;
   }
